news refactor after tests

--- a/src/artist.html
+++ b/src/artist.html
@@ -52,7 +52,7 @@
 <main>
   <section class="section section--artist" id="page-popular-track">
     <div class="container">
-      <h2 class="section-title">Популярные треки</h2>
+      <h2 class="text-center mb-5">Популярные треки</h2>
 
       <ul class="popular-tracks grid grid--items-2">
         <li class="popular-tracks-info">
@@ -97,7 +97,7 @@
 
   <section class="section section--artist" id="page-discography">
     <div class="container">
-      <h2 class="section-title">Дискография</h2>
+      <h2 class="text-center mb-5">Дискография</h2>
 
       <div class="grid grid--items-4">
         <div class="discography-item">
@@ -141,7 +141,7 @@
 
   <section class="section section--artist section--same-vertical" id="page-similar">
     <div class="container">
-      <h2 class="section-title">Похожие исполнители</h2>
+      <h2 class="text-center mb-5">Похожие исполнители</h2>
 
       <div class="grid grid--items-4">
         <div class="similar">
