--- a/src/index.html
+++ b/src/index.html
@@ -109,49 +109,51 @@
   </section>
 
   <section class="section" id="page-news">
-    <h2 class="section-title">Последние новости</h2>
+    <div class="limit-content">
+      <h2 class="text-center mb-5">Последние новости</h2>
 
-    <div class="news-item news-item--img-left mb-7">
-      <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
-      <div class="news-item-body">
-        <h3 class="news-item-title">Music to Be Murdered By</h3>
-        <p class="fs-1">
-          Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
-          новых треков.
-        </p>
-      </div>
-      <div class="news-item-footer">
-        <div class="news-item-author">
-          <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
-          <p class="news-item-author-name">Music box</p>
-          <p class="news-item-date">17/01/2020</p>
+      <div class="news-item news-item--img-left mb-7">
+        <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
+        <div class="news-item-body">
+          <h3 class="news-item-title">Music to Be Murdered By</h3>
+          <p class="fs-1">
+            Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
+            новых треков.
+          </p>
         </div>
-        <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+        <div class="news-item-footer">
+          <div class="news-item-author">
+            <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+            <p class="news-item-author-name">Music box</p>
+            <p class="news-item-date">17/01/2020</p>
+          </div>
+          <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+        </div>
       </div>
-    </div>
 
-    <div class="news-item news-item--img-right">
-      <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
-      <div class="news-item-body">
-        <h3 class="news-item-title">Ordinary Man</h3>
-        <p class="fs-1">
-          Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
-          Music Box
-        </p>
-      </div>
-      <div class="news-item-footer">
-        <div class="news-item-author">
-          <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
-          <p class="news-item-author-name">Music box</p>
-          <p class="news-item-date">24/02/2020</p>
+      <div class="news-item news-item--img-right">
+        <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
+        <div class="news-item-body">
+          <h3 class="news-item-title">Ordinary Man</h3>
+          <p class="fs-1">
+            Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
+            Music Box
+          </p>
         </div>
-        <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+        <div class="news-item-footer">
+          <div class="news-item-author">
+            <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+            <p class="news-item-author-name">Music box</p>
+            <p class="news-item-date">24/02/2020</p>
+          </div>
+          <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+        </div>
       </div>
     </div>
   </section>
 
   <section class="section section--same-vertical" id="page-app">
-    <h2 class="section-title">Мобильное приложение</h2>
+    <h2 class="text-center mb-5">Мобильное приложение</h2>
 
     <div class="section-content section-content--row section-content--two-rows section-content--mobile-reverse">
       <div class="app-text">
