--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 </section>
 
 <main>
-  <section class="section" id="page-pricing">
+  <section class="pt-10" id="page-pricing">
     <div class="limit-content">
       <h2 class="text-center mb-5">Формы подписки</h2>
 
@@ -108,7 +108,7 @@
     </div>
   </section>
 
-  <section class="section" id="page-news">
+  <section class="pt-10" id="page-news">
     <div class="limit-content">
       <h2 class="text-center mb-5">Последние новости</h2>
 
@@ -152,21 +152,23 @@
     </div>
   </section>
 
-  <section class="section section--same-vertical" id="page-app">
-    <h2 class="text-center mb-5">Мобильное приложение</h2>
+  <section class="py-10" id="page-app">
+    <div class="limit-content">
+      <h2 class="text-center mb-5">Мобильное приложение</h2>
 
-    <div class="section-content section-content--row section-content--two-rows section-content--mobile-reverse">
-      <div class="app-text">
-        <p class="fs-1 mb-1">
-          Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
-          операционных систем Androind и iOS
-          <br><br>
-          С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать
-          музыку даже без интернета.
-        </p>
-        <div class="btn btn-red btn-pill btn-sm-wide">Скачать</div>
+      <div class="d-flex flex-row flex-mobile-column-reverse flex-two-rows">
+        <div>
+          <p class="fs-1 mb-1 mt-1">
+            Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
+            операционных систем Androind и iOS
+            <br><br>
+            С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать
+            музыку даже без интернета.
+          </p>
+          <div class="btn btn-red btn-pill btn-sm-wide fs-small-more tt-capitalize">Скачать</div>
+        </div>
+        <img class="d-block mx-auto" src="./images/iphone.png" alt="Iphone image">
       </div>
-      <img class="app-image mb-mobile-1" src="./images/iphone.png" alt="Iphone image">
     </div>
   </section>
 </main>
