footer refactor after tests

--- a/src/index.html
+++ b/src/index.html
@@ -156,8 +156,8 @@
     <div class="limit-content">
       <h2 class="text-center mb-5">Мобильное приложение</h2>
 
-      <div class="d-flex flex-row flex-mobile-column-reverse flex-two-rows">
-        <div>
+      <div class="d-flex flex-row flex-mobile-column-reverse">
+        <div class="max-width-600">
           <p class="fs-1 mb-1 mt-1">
             Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
             операционных систем Androind и iOS
@@ -174,30 +174,30 @@
 </main>
 
 <footer class="footer bg-gradient">
-  <div class="container footer-content">
-    <div class="footer-col">
+  <div class="limit-content d-flex flex-mobile-column column-gap-4 row-gap-mobile-3">
+    <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">О нас</h2>
-      <a class="footer-link" href="#">История компании</a>
-      <a class="footer-link" href="#">Карьера</a>
-      <a class="footer-link" href="#">Особенности</a>
-      <a class="footer-link" href="#">Пресса</a>
+      <a class="fs-1" href="#">История компании</a>
+      <a class="fs-1" href="#">Карьера</a>
+      <a class="fs-1" href="#">Особенности</a>
+      <a class="fs-1" href="#">Пресса</a>
     </div>
-    <div class="footer-col">
+    <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">Поддержка</h2>
-      <a class="footer-link" href="#">База знаний</a>
-      <a class="footer-link" href="#">Тарифы</a>
-      <a class="footer-link" href="#">Мобильное приложение</a>
-      <a class="footer-link" href="#">Условия использования</a>
+      <a class="fs-1" href="#">База знаний</a>
+      <a class="fs-1" href="#">Тарифы</a>
+      <a class="fs-1" href="#">Мобильное приложение</a>
+      <a class="fs-1" href="#">Условия использования</a>
     </div>
-    <div class="footer-col">
+    <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">Контакты</h2>
-      <a class="footer-link" href="mailto:hello@music.box">hello@music.box</a>
-      <p class="footer-link">Russia, Moscow. Music Box studio</p>
-      <a class="footer-link" href="tel:+74999999999">+ 7 499 999 99 99</a>
+      <a class="fs-1" href="mailto:hello@music.box">hello@music.box</a>
+      <p class="fs-1">Russia, Moscow. Music Box studio</p>
+      <a class="fs-1" href="tel:+74999999999">+ 7 499 999 99 99</a>
     </div>
-    <div class="footer-col">
+    <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">Подписывайтесь</h2>
-      <div class="footer-socials">
+      <div class="d-flex align-items-center column-gap-2">
         <a href="#">
           <img src="./images/Google+.png" alt="google">
         </a>
@@ -214,23 +214,25 @@
     </div>
   </div>
   <hr class="divider">
-  <ul class="footer-nav">
-    <li>
-      <a class="footer-link" href="#">Магазин</a>
-    </li>
-    <li>
-      <a class="footer-link" href="#">Обслуживание</a>
-    </li>
-    <li>
-      <a class="footer-link" href="#">Блог</a>
-    </li>
-    <li>
-      <a class="footer-link" href="#">Поддержка</a>
-    </li>
-    <li>
-      <a class="footer-link" href="#">Контакты</a>
-    </li>
-  </ul>
+  <div class="limit-content">
+    <ul class="d-flex column-gap-1">
+      <li>
+        <a class="fs-1" href="#">Магазин</a>
+      </li>
+      <li>
+        <a class="fs-1" href="#">Обслуживание</a>
+      </li>
+      <li>
+        <a class="fs-1" href="#">Блог</a>
+      </li>
+      <li>
+        <a class="fs-1" href="#">Поддержка</a>
+      </li>
+      <li>
+        <a class="fs-1" href="#">Контакты</a>
+      </li>
+    </ul>
+  </div>
 </footer>
 </body>
 </html>
