page-pricing second refactor after tests

--- a/src/index.html
+++ b/src/index.html
@@ -62,50 +62,48 @@
 </section>
 
 <main>
-  <section class="pt-10" id="page-pricing">
-    <div class="limit-content">
-      <h2 class="text-center mb-5">Формы подписки</h2>
+  <section class="pt-10 limit-content" id="page-pricing">
+    <h2 class="text-center mb-5">Формы подписки</h2>
 
-      <div class="pricing-list mb-4">
-        <div class="pricing-card pricing-card--free">
-          <h3 class="pricing-card-title">Бесплатная</h3>
-          <p class="pricing-card-value">
-            0 <span class="pricing-card-currency">руб.</span>
-          </p>
-          <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
-          <p class="pricing-card-footer">
-            Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
-          </p>
-        </div>
-
-        <div class="pricing-card pricing-card--standard">
-          <h3 class="pricing-card-title">Стандартная</h3>
-          <p class="pricing-card-value">
-            250 <span class="pricing-card-currency">руб.</span>
-          </p>
-          <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
-          <p class="pricing-card-footer">
-            Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
-          </p>
-        </div>
-
-        <div class="pricing-card pricing-card--premium">
-          <h3 class="pricing-card-title">Премиум</h3>
-          <p class="pricing-card-value">
-            500 <span class="pricing-card-currency">руб.</span>
-          </p>
-          <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
-          <p class="pricing-card-footer">
-            Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
-          </p>
-        </div>
+    <div class="pricing-list mb-4">
+      <div class="pricing-card pricing-card--free">
+        <h3 class="pricing-card-title">Бесплатная</h3>
+        <p class="pricing-card-value">
+          0 <span class="pricing-card-currency">руб.</span>
+        </p>
+        <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
+        <p class="pricing-card-footer">
+          Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама
+        </p>
       </div>
 
-      <p class="fs-1 text-center">
-        На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать
-        все композиции на ваше устройство и слушать музыку без подключения к интернету
-      </p>
+      <div class="pricing-card pricing-card--standard">
+        <h3 class="pricing-card-title">Стандартная</h3>
+        <p class="pricing-card-value">
+          250 <span class="pricing-card-currency">руб.</span>
+        </p>
+        <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
+        <p class="pricing-card-footer">
+          Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве
+        </p>
+      </div>
+
+      <div class="pricing-card pricing-card--premium">
+        <h3 class="pricing-card-title">Премиум</h3>
+        <p class="pricing-card-value">
+          500 <span class="pricing-card-currency">руб.</span>
+        </p>
+        <a class="btn btn-white-outline btn-fill mb-7 fs-1" href="#">Оформить</a>
+        <p class="pricing-card-footer">
+          Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве
+        </p>
+      </div>
     </div>
+
+    <p class="fs-1 text-center">
+      На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать
+      все композиции на ваше устройство и слушать музыку без подключения к интернету
+    </p>
   </section>
 
   <section class="pt-10" id="page-news">
