--- a/src/index.html
+++ b/src/index.html
@@ -106,52 +106,49 @@
     </p>
   </section>
 
-  <section class="pt-10" id="page-news">
-    <div class="limit-content">
-      <h2 class="text-center mb-5">Последние новости</h2>
+  <section class="pt-10 limit-content" id="page-news">
+    <h2 class="text-center mb-5">Последние новости</h2>
 
-      <div class="news-item news-item--img-left mb-7">
-        <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
-        <div class="news-item-body">
-          <h3 class="news-item-title">Music to Be Murdered By</h3>
-          <p class="fs-1">
-            Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
-            новых треков.
-          </p>
-        </div>
-        <div class="news-item-footer">
-          <div class="news-item-author">
-            <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
-            <p class="news-item-author-name">Music box</p>
-            <p class="news-item-date">17/01/2020</p>
-          </div>
-          <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
-        </div>
+    <div class="news-item news-item--img-left mb-7">
+      <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
+      <div class="news-item-body">
+        <h3 class="news-item-title">Music to Be Murdered By</h3>
+        <p class="fs-1">
+          Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
+          новых треков.
+        </p>
       </div>
+      <div class="news-item-footer">
+        <div class="news-item-author">
+          <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+          <p class="news-item-author-name">Music box</p>
+          <p class="news-item-date">17/01/2020</p>
+        </div>
+        <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
+      </div>
+    </div>
 
-      <div class="news-item news-item--img-right">
-        <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
-        <div class="news-item-body">
-          <h3 class="news-item-title">Ordinary Man</h3>
-          <p class="fs-1">
-            Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
-            Music Box
-          </p>
+    <div class="news-item news-item--img-right">
+      <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
+      <div class="news-item-body">
+        <h3 class="news-item-title">Ordinary Man</h3>
+        <p class="fs-1">
+          Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
+          Music Box
+        </p>
+      </div>
+      <div class="news-item-footer">
+        <div class="news-item-author">
+          <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
+          <p class="news-item-author-name">Music box</p>
+          <p class="news-item-date">24/02/2020</p>
         </div>
-        <div class="news-item-footer">
-          <div class="news-item-author">
-            <img class="news-item-avatar" src="./images/avatar.png" alt="News author avatar">
-            <p class="news-item-author-name">Music box</p>
-            <p class="news-item-date">24/02/2020</p>
-          </div>
-          <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
-        </div>
+        <a class="btn btn-dark-gray-outline btn-sm" href="#">К альбому</a>
       </div>
     </div>
   </section>
 
-  <section class="py-10" id="page-app">
-    <div class="limit-content">
+  <section class="py-10 limit-content" id="page-app">
       <h2 class="text-center mb-5">Мобильное приложение</h2>
 
       <div class="d-flex flex-row flex-mobile-column-reverse">
@@ -159,7 +156,8 @@
           <p class="fs-1 mb-1 mt-1">
             Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
             операционных систем Androind и iOS
-            <br><br>
+          </p>
+          <p class="fs-1 mb-1">
             С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать
             музыку даже без интернета.
           </p>
@@ -167,27 +165,46 @@
         </div>
         <img class="d-block mx-auto" src="./images/iphone.png" alt="Iphone image">
       </div>
-    </div>
   </section>
 </main>
 
 <footer class="footer bg-gradient">
-  <div class="limit-content d-flex flex-mobile-column column-gap-4 row-gap-mobile-3">
+  <div class="footer-full-nav limit-content d-flex flex-mobile-column column-gap-4 row-gap-mobile-3">
     <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">О нас</h2>
-      <a class="fs-1" href="#">История компании</a>
-      <a class="fs-1" href="#">Карьера</a>
-      <a class="fs-1" href="#">Особенности</a>
-      <a class="fs-1" href="#">Пресса</a>
+      <ul>
+        <li class="fs-1">
+          <a  href="#">История компании</a>
+        </li>
+        <li class="fs-1">
+          <a href="#">Карьера</a>
+        </li>
+        <li class="fs-1">
+          <a href="#">Особенности</a>
+        </li>
+        <li class="fs-1">
+          <a href="#">Пресса</a>
+        </li>
+      </ul>
     </div>
     <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">Поддержка</h2>
-      <a class="fs-1" href="#">База знаний</a>
-      <a class="fs-1" href="#">Тарифы</a>
-      <a class="fs-1" href="#">Мобильное приложение</a>
-      <a class="fs-1" href="#">Условия использования</a>
+      <ul>
+        <li class="fs-1">
+          <a href="#">База знаний</a>
+        </li>
+        <li class="fs-1">
+          <a href="#">Тарифы</a>
+        </li>
+        <li class="fs-1">
+          <a href="#">Мобильное приложение</a>
+        </li>
+        <li class="fs-1">
+          <a href="#">Условия использования</a>
+        </li>
+      </ul>
     </div>
-    <div class="footer-col d-flex flex-column">
+    <div class="footer-col">
       <h2 class="footer-col-title">Контакты</h2>
       <a class="fs-1" href="mailto:hello@music.box">hello@music.box</a>
       <p class="fs-1">Russia, Moscow. Music Box studio</p>
@@ -212,7 +229,7 @@
     </div>
   </div>
   <hr class="divider">
-  <div class="limit-content">
+  <div class="footer-nav limit-content">
     <ul class="d-flex column-gap-1">
       <li>
         <a class="fs-1" href="#">Магазин</a>
