main page refactor after tests 2

--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
     </div>
   </section>
 
-  <section class="py-10 limit-content" id="page-app">
+  <section class="pt-10 mb-10 limit-content" id="page-app">
       <h2 class="text-center mb-5">Мобильное приложение</h2>
 
       <div class="d-flex flex-row flex-mobile-column-reverse">
@@ -169,7 +169,7 @@
 </main>
 
 <footer class="footer bg-gradient">
-  <div class="footer-full-nav limit-content d-flex flex-mobile-column column-gap-4 row-gap-mobile-3">
+  <div class="footer-full-nav limit-content d-flex flex-mobile-column column-gap-4">
     <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">О нас</h2>
       <ul>
@@ -230,21 +230,21 @@
   </div>
   <hr class="divider">
   <div class="footer-nav limit-content">
-    <ul class="d-flex column-gap-1">
-      <li>
-        <a class="fs-1" href="#">Магазин</a>
+    <ul class="d-flex column-gap-1 row-gap-mobile-1 flex-mobile-column">
+      <li class="fs-1">
+        <a href="#">Магазин</a>
       </li>
-      <li>
-        <a class="fs-1" href="#">Обслуживание</a>
+      <li class="fs-1">
+        <a href="#">Обслуживание</a>
       </li>
-      <li>
-        <a class="fs-1" href="#">Блог</a>
+      <li class="fs-1">
+        <a href="#">Блог</a>
       </li>
-      <li>
-        <a class="fs-1" href="#">Поддержка</a>
+      <li class="fs-1">
+        <a href="#">Поддержка</a>
       </li>
-      <li>
-        <a class="fs-1" href="#">Контакты</a>
+      <li class="fs-1">
+        <a href="#">Контакты</a>
       </li>
     </ul>
   </div>
