main page refactor after tests 3

--- a/src/index.html
+++ b/src/index.html
@@ -229,24 +229,12 @@
     </div>
   </div>
   <hr class="divider">
-  <div class="footer-nav limit-content">
-    <ul class="d-flex column-gap-1 row-gap-mobile-1 flex-mobile-column">
-      <li class="fs-1">
-        <a href="#">Магазин</a>
-      </li>
-      <li class="fs-1">
-        <a href="#">Обслуживание</a>
-      </li>
-      <li class="fs-1">
-        <a href="#">Блог</a>
-      </li>
-      <li class="fs-1">
-        <a href="#">Поддержка</a>
-      </li>
-      <li class="fs-1">
-        <a href="#">Контакты</a>
-      </li>
-    </ul>
+  <div class="footer-nav limit-content d-flex column-gap-1 row-gap-mobile-1 flex-mobile-column">
+    <a class="fs-1" href="#">Магазин</a>
+    <a class="fs-1" href="#">Обслуживание</a>
+    <a class="fs-1" href="#">Блог</a>
+    <a class="fs-1" href="#">Поддержка</a>
+    <a class="fs-1" href="#">Контакты</a>
   </div>
 </footer>
 </body>
