main page refactor after tests 5

--- a/src/index.html
+++ b/src/index.html
@@ -211,12 +211,20 @@
       <a class="fs-1" href="tel:+74999999999">+ 7 499 999 99 99</a>
     </div>
     <div class="footer-col d-flex flex-column">
-      <h2 class="footer-col-title">Подписывайтесь</h2>
+      <h2 class="footer-col-title footer-col-title--social">Подписывайтесь</h2>
       <div class="d-flex align-items-center column-gap-2">
-        <img src="./images/Google+.png" alt="google">
-        <img src="./images/Twitter.png" alt="twitter">
-        <img src="./images/Facebook.png" alt="facebook">
-        <img src="./images/Instagram.png" alt="instagram">
+        <a href="#">
+          <img src="./images/Google+.png" alt="google">
+        </a>
+        <a href="#">
+          <img src="./images/Twitter.png" alt="twitter">
+        </a>
+        <a href="#">
+          <img src="./images/Facebook.png" alt="facebook">
+        </a>
+        <a href="#">
+          <img src="./images/Instagram.png" alt="instagram">
+        </a>
       </div>
     </div>
   </div>
