main page refactor after tests 5.1

--- a/src/index.html
+++ b/src/index.html
@@ -205,13 +205,13 @@
       </ul>
     </div>
     <div class="footer-col">
-      <h2 class="footer-col-title">Контакты</h2>
+      <h2 class="footer-col-title footer-col-title--social">Контакты</h2>
       <a class="fs-1" href="mailto:hello@music.box">hello@music.box</a>
       <p class="fs-1">Russia, Moscow. Music Box studio</p>
       <a class="fs-1" href="tel:+74999999999">+ 7 499 999 99 99</a>
     </div>
     <div class="footer-col d-flex flex-column">
-      <h2 class="footer-col-title footer-col-title--social">Подписывайтесь</h2>
+      <h2 class="footer-col-title">Подписывайтесь</h2>
       <div class="d-flex align-items-center column-gap-2">
         <a href="#">
           <img src="./images/Google+.png" alt="google">
