main page refactor after tests 6

--- a/src/index.html
+++ b/src/index.html
@@ -204,11 +204,11 @@
         </li>
       </ul>
     </div>
-    <div class="footer-col">
-      <h2 class="footer-col-title footer-col-title--social">Контакты</h2>
-      <a class="fs-1" href="mailto:hello@music.box">hello@music.box</a>
+    <div class="footer-col d-flex flex-column">
+      <h2 class="footer-col-title">Контакты</h2>
+      <a class="fs-1 align-self-flex-start" href="mailto:hello@music.box">hello@music.box</a>
       <p class="fs-1">Russia, Moscow. Music Box studio</p>
-      <a class="fs-1" href="tel:+74999999999">+ 7 499 999 99 99</a>
+      <a class="fs-1 align-self-flex-start" href="tel:+74999999999">+ 7 499 999 99 99</a>
     </div>
     <div class="footer-col d-flex flex-column">
       <h2 class="footer-col-title">Подписывайтесь</h2>
@@ -228,7 +228,6 @@
       </div>
     </div>
   </div>
-  <hr class="divider">
   <div class="footer-nav limit-content d-flex column-gap-1 row-gap-mobile-1 flex-mobile-column">
     <a class="fs-1" href="#">Магазин</a>
     <a class="fs-1" href="#">Обслуживание</a>
