--- a/src/index.html
+++ b/src/index.html
@@ -228,6 +228,7 @@
       </div>
     </div>
   </div>
+  <hr class="divider" />
   <div class="footer-nav limit-content d-flex column-gap-1 row-gap-mobile-1 flex-mobile-column">
     <a class="fs-1" href="#">Магазин</a>
     <a class="fs-1" href="#">Обслуживание</a>
