artist refactor after tests

--- a/src/artist.html
+++ b/src/artist.html
@@ -52,9 +52,9 @@
 </section>
 
 <main>
-  <section class="section section--artist" id="page-popular-track">
+  <section class="pt-10" id="page-popular-track">
     <div class="limit-content">
-      <h2 class="text-center mb-5">Популярные треки</h2>
+      <h2 class="text-start mb-5">Популярные треки</h2>
 
       <ul class="popular-tracks grid grid--items-2">
         <li class="popular-tracks-info">
@@ -97,9 +97,9 @@
     </div>
   </section>
 
-  <section class="section section--artist" id="page-discography">
+  <section class="pt-10" id="page-discography">
     <div class="limit-content">
-      <h2 class="text-center mb-5">Дискография</h2>
+      <h2 class="text-start mb-5">Дискография</h2>
 
       <div class="grid grid--items-4">
         <div class="discography-item">
@@ -141,9 +141,9 @@
     </div>
   </section>
 
-  <section class="section section--artist section--same-vertical" id="page-similar">
+  <section class="py-10" id="page-similar">
     <div class="limit-content">
-      <h2 class="text-center mb-5">Похожие исполнители</h2>
+      <h2 class="text-start mb-5">Похожие исполнители</h2>
 
       <div class="grid grid--items-4">
         <div class="similar">
