artist refactor after tests 2

--- a/src/artist.html
+++ b/src/artist.html
@@ -52,147 +52,153 @@
 </section>
 
 <main>
-  <section class="pt-10" id="page-popular-track">
-    <div class="limit-content">
-      <h2 class="text-start mb-5">Популярные треки</h2>
+  <section class="pt-10 limit-content" id="page-popular-track">
+    <h2 class="text-start mb-5">Популярные треки</h2>
 
-      <ul class="popular-tracks grid grid--items-2">
-        <li class="popular-tracks-info">
-          <img class="popular-tracks-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
-          <h3 class="popular-tracks-song">Spanish Step</h3>
-          <p class="popular-tracks-author">Morten Harket</p>
-          <p class="popular-tracks-time">4:07</p>
-        </li>
-        <li class="popular-tracks-info">
-          <img class="popular-tracks-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
-          <h3 class="popular-tracks-song">With You - With Me</h3>
-          <p class="popular-tracks-author">Morten Harket</p>
-          <p class="popular-tracks-time">3:48</p>
-        </li>
-        <li class="popular-tracks-info">
-          <img class="popular-tracks-cover" src="./images/Brother.png" alt="Brother">
-          <h3 class="popular-tracks-song">Brother</h3>
-          <p class="popular-tracks-author">Morten Harket</p>
-          <p class="popular-tracks-time">5:05</p>
-        </li>
-        <li class="popular-tracks-info">
-          <img class="popular-tracks-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
-          <h3 class="popular-tracks-song">Brodsky Tune</h3>
-          <p class="popular-tracks-author">Morten Harket</p>
-          <p class="popular-tracks-time">4:24</p>
-        </li>
-        <li class="popular-tracks-info">
-          <img class="popular-tracks-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
-          <h3 class="popular-tracks-song">Darkspace</h3>
-          <p class="popular-tracks-author">Morten Harket</p>
-          <p class="popular-tracks-time">3:45</p>
-        </li>
-        <li class="popular-tracks-info">
-          <img class="popular-tracks-cover" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
-          <h3 class="popular-tracks-song">Burn Money Burn</h3>
-          <p class="popular-tracks-author">Morten Harket</p>
-          <p class="popular-tracks-time">3:52</p>
-        </li>
-      </ul>
-    </div>
+    <ul class="popular-tracks grid grid--items-2">
+      <li class="d-flex column-gap-1 align-items-center">
+        <img class="popular-tracks-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
+        <div>
+          <h3 class="fs-small-more">Spanish Step</h3>
+          <p class="fs-small-more tt-capitalize">Morten Harket</p>
+        </div>
+        <p class="ms-auto fs-small-more">4:07</p>
+      </li>
+      <li class="d-flex column-gap-1 align-items-center">
+        <img class="popular-tracks-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
+        <div>
+          <h3 class="fs-small-more">With You - With Me</h3>
+          <p class="fs-small-more tt-capitalize">Morten Harket</p>
+        </div>
+        <p class="ms-auto fs-small-more">3:48</p>
+      </li>
+      <li class="d-flex column-gap-1 align-items-center">
+        <img class="popular-tracks-cover" src="./images/Brother.png" alt="Brother">
+        <div>
+          <h3 class="fs-small-more">Brother</h3>
+          <p class="fs-small-more tt-capitalize">Morten Harket</p>
+        </div>
+        <p class="ms-auto fs-small-more">5:05</p>
+      </li>
+      <li class="d-flex column-gap-1 align-items-center">
+        <img class="popular-tracks-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
+        <div>
+          <h3 class="fs-small-more">Brodsky Tune</h3>
+          <p class="fs-small-more tt-capitalize">Morten Harket</p>
+        </div>
+        <p class="ms-auto fs-small-more">4:24</p>
+      </li>
+      <li class="d-flex column-gap-1 align-items-center">
+        <img class="popular-tracks-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
+        <div>
+          <h3 class="fs-small-more">Darkspace</h3>
+          <p class="fs-small-more tt-capitalize">Morten Harket</p>
+        </div>
+        <p class="ms-auto fs-small-more">3:45</p>
+      </li>
+      <li class="d-flex column-gap-1 align-items-center">
+        <img class="popular-tracks-cover" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
+        <div>
+          <h3 class="fs-small-more">Burn Money Burn</h3>
+          <p class="fs-small-more tt-capitalize">Morten Harket</p>
+        </div>
+        <p class="ms-auto fs-small-more">3:52</p>
+      </li>
+    </ul>
   </section>
 
-  <section class="pt-10" id="page-discography">
-    <div class="limit-content">
-      <h2 class="text-start mb-5">Дискография</h2>
+  <section class="pt-10 limit-content" id="page-discography">
+    <h2 class="text-start mb-5">Дискография</h2>
 
-      <div class="grid grid--items-4">
-        <div class="discography-item">
-          <img class="discography-item-cover" src="./images/Brother.png" alt="Brother">
-          <h3 class="discography-item-album-name">Brother</h3>
-          <p class="fs-1">2014</p>
-        </div>
+    <div class="grid grid--items-4">
+      <div class="discography-item">
+        <img class="discography-item-cover mb-1" src="./images/Brother.png" alt="Brother">
+        <h3 class="discography-item-album-name tt-capitalize">Brother</h3>
+        <p class="fs-1">2014</p>
+      </div>
 
-        <div class="discography-item">
-          <img class="discography-item-cover" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
-          <h3 class="discography-item-album-name">Out Of My Hands</h3>
-          <p class="fs-1">2012</p>
-        </div>
+      <div class="discography-item">
+        <img class="discography-item-cover mb-1" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
+        <h3 class="discography-item-album-name tt-capitalize">Out Of My Hands</h3>
+        <p class="fs-1">2012</p>
+      </div>
 
-        <div class="discography-item">
-          <img class="discography-item-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
-          <h3 class="discography-item-album-name">Letter From Egypt</h3>
-          <p class="fs-1">2008</p>
-        </div>
+      <div class="discography-item">
+        <img class="discography-item-cover mb-1" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
+        <h3 class="discography-item-album-name tt-capitalize">Letter From Egypt</h3>
+        <p class="fs-1">2008</p>
+      </div>
 
-        <div class="discography-item">
-          <img class="discography-item-cover" src="./images/Vogts%20Villa.png" alt="Vogts Vills">
-          <h3 class="discography-item-album-name">Vogts Vills</h3>
-          <p class="fs-1">1996</p>
-        </div>
+      <div class="discography-item">
+        <img class="discography-item-cover mb-1" src="./images/Vogts%20Villa.png" alt="Vogts Vills">
+        <h3 class="discography-item-album-name tt-capitalize">Vogts Vills</h3>
+        <p class="fs-1">1996</p>
+      </div>
 
-        <div class="discography-item">
-          <img class="discography-item-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
-          <h3 class="discography-item-album-name">Wild Seed</h3>
-          <p class="fs-1">1995</p>
-        </div>
+      <div class="discography-item">
+        <img class="discography-item-cover mb-1" src="./images/Wild%20Seed.png" alt="Wild Seed">
+        <h3 class="discography-item-album-name tt-capitalize">Wild Seed</h3>
+        <p class="fs-1">1995</p>
+      </div>
 
-        <div class="discography-item">
-          <img class="discography-item-cover" src="./images/Poetenes%20Evangelium.png" alt="Poetenes Evangelium">
-          <h3 class="discography-item-album-name">Poetenes Evangelium</h3>
-          <p class="fs-1">1993</p>
-        </div>
+      <div class="discography-item">
+        <img class="discography-item-cover mb-1" src="./images/Poetenes%20Evangelium.png" alt="Poetenes Evangelium">
+        <h3 class="discography-item-album-name tt-capitalize">Poetenes Evangelium</h3>
+        <p class="fs-1">1993</p>
       </div>
     </div>
   </section>
 
-  <section class="py-10" id="page-similar">
-    <div class="limit-content">
-      <h2 class="text-start mb-5">Похожие исполнители</h2>
+  <section class="pt-10 mb-10 limit-content" id="page-similar">
+    <h2 class="text-start mb-5">Похожие исполнители</h2>
 
-      <div class="grid grid--items-4">
-        <div class="similar">
-          <img class="similar-cover" src="./images/A-ha.png" alt="A-Ha">
-          <h3 class="similar-name">A-Ha</h3>
-          <p class="similar-fans">417 086 поклонников</p>
-        </div>
+    <div class="grid grid--items-4">
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/A-ha.png" alt="A-Ha">
+        <h3 class="similar-name">A-Ha</h3>
+        <p class="similar-fans">417 086 поклонников</p>
+      </div>
 
-        <div class="similar">
-          <img class="similar-cover" src="./images/Tears%20for%20Fears.png" alt="Tears For Fears">
-          <h3 class="similar-name">Tears For Fears</h3>
-          <p class="similar-fans">434 086 поклонников</p>
-        </div>
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/Tears%20for%20Fears.png" alt="Tears For Fears">
+        <h3 class="similar-name">Tears For Fears</h3>
+        <p class="similar-fans">434 086 поклонников</p>
+      </div>
 
-        <div class="similar">
-          <img class="similar-cover" src="./images/Duran%20Duran.png" alt="Duran Duran">
-          <h3 class="similar-name">Duran Duran</h3>
-          <p class="similar-fans">631 071 поклонник</p>
-        </div>
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/Duran%20Duran.png" alt="Duran Duran">
+        <h3 class="similar-name">Duran Duran</h3>
+        <p class="similar-fans">631 071 поклонник</p>
+      </div>
 
-        <div class="similar">
-          <img class="similar-cover" src="./images/Jack%20Savoretti.png" alt="Jack Savoretti">
-          <h3 class="similar-name">Jack Savoretti</h3>
-          <p class="similar-fans">26 857 поклонников</p>
-        </div>
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/Jack%20Savoretti.png" alt="Jack Savoretti">
+        <h3 class="similar-name">Jack Savoretti</h3>
+        <p class="similar-fans">26 857 поклонников</p>
+      </div>
 
-        <div class="similar">
-          <img class="similar-cover" src="./images/Keane.png" alt="Keane">
-          <h3 class="similar-name">Keane</h3>
-          <p class="similar-fans">1 704 358 поклонников</p>
-        </div>
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/Keane.png" alt="Keane">
+        <h3 class="similar-name">Keane</h3>
+        <p class="similar-fans">1 704 358 поклонников</p>
+      </div>
 
-        <div class="similar">
-          <img class="similar-cover" src="./images/Frank%20Sinatra.png" alt="Frank Sinatra">
-          <h3 class="similar-name">Frank Sinatra</h3>
-          <p class="similar-fans">1 653 882 поклонников</p>
-        </div>
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/Frank%20Sinatra.png" alt="Frank Sinatra">
+        <h3 class="similar-name">Frank Sinatra</h3>
+        <p class="similar-fans">1 653 882 поклонников</p>
+      </div>
 
-        <div class="similar">
-          <img class="similar-cover" src="./images/Paul%20Young.png" alt="Paul Young">
-          <h3 class="similar-name">Paul Young</h3>
-          <p class="similar-fans">50 329 поклонников</p>
-        </div>
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/Paul%20Young.png" alt="Paul Young">
+        <h3 class="similar-name">Paul Young</h3>
+        <p class="similar-fans">50 329 поклонников</p>
+      </div>
 
-        <div class="similar">
-          <img class="similar-cover" src="./images/Chris%20Rea.png" alt="Chris Rea">
-          <h3 class="similar-name">Chris Rea</h3>
-          <p class="similar-fans">73 351 поклонников</p>
-        </div>
+      <div class="similar text-center">
+        <img class="similar-cover" src="./images/Chris%20Rea.png" alt="Chris Rea">
+        <h3 class="similar-name">Chris Rea</h3>
+        <p class="similar-fans">73 351 поклонников</p>
       </div>
     </div>
   </section>
@@ -204,7 +210,7 @@
       <h2 class="footer-col-title">О нас</h2>
       <ul>
         <li class="fs-1">
-          <a  href="#">История компании</a>
+          <a href="#">История компании</a>
         </li>
         <li class="fs-1">
           <a href="#">Карьера</a>
@@ -258,7 +264,7 @@
       </div>
     </div>
   </div>
-  <hr class="divider" />
+  <hr class="divider"/>
   <div class="footer-nav limit-content d-flex column-gap-1 row-gap-mobile-1 flex-mobile-column">
     <a class="fs-1" href="#">Магазин</a>
     <a class="fs-1" href="#">Обслуживание</a>
