artist refactor after tests 3

--- a/src/artist.html
+++ b/src/artist.html
@@ -119,7 +119,7 @@
 
       <div class="discography-item">
         <img class="discography-item-cover mb-1" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
-        <h3 class="discography-item-album-name tt-capitalize">Out Of My Hands</h3>
+        <h3 class="discography-item-album-name tt-capitalize nowrap">Out Of My Hands</h3>
         <p class="fs-1">2012</p>
       </div>
 
