artist refactor after tests 4

--- a/src/artist.html
+++ b/src/artist.html
@@ -55,56 +55,56 @@
   <section class="pt-10 limit-content" id="page-popular-track">
     <h2 class="text-start mb-5">Популярные треки</h2>
 
-    <ul class="popular-tracks grid grid--items-2">
-      <li class="d-flex column-gap-1 align-items-center">
+    <div class="popular-tracks grid grid--items-2">
+      <div class="d-flex column-gap-1 align-items-center">
         <img class="popular-tracks-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
         <div>
           <h3 class="fs-small-more">Spanish Step</h3>
           <p class="fs-small-more tt-capitalize">Morten Harket</p>
         </div>
         <p class="ms-auto fs-small-more">4:07</p>
-      </li>
-      <li class="d-flex column-gap-1 align-items-center">
+      </div>
+      <div class="d-flex column-gap-1 align-items-center">
         <img class="popular-tracks-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
         <div>
           <h3 class="fs-small-more">With You - With Me</h3>
           <p class="fs-small-more tt-capitalize">Morten Harket</p>
         </div>
         <p class="ms-auto fs-small-more">3:48</p>
-      </li>
-      <li class="d-flex column-gap-1 align-items-center">
+      </div>
+      <div class="d-flex column-gap-1 align-items-center">
         <img class="popular-tracks-cover" src="./images/Brother.png" alt="Brother">
         <div>
           <h3 class="fs-small-more">Brother</h3>
           <p class="fs-small-more tt-capitalize">Morten Harket</p>
         </div>
         <p class="ms-auto fs-small-more">5:05</p>
-      </li>
-      <li class="d-flex column-gap-1 align-items-center">
+      </div>
+      <div class="d-flex column-gap-1 align-items-center">
         <img class="popular-tracks-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
         <div>
           <h3 class="fs-small-more">Brodsky Tune</h3>
           <p class="fs-small-more tt-capitalize">Morten Harket</p>
         </div>
         <p class="ms-auto fs-small-more">4:24</p>
-      </li>
-      <li class="d-flex column-gap-1 align-items-center">
+      </div>
+      <div class="d-flex column-gap-1 align-items-center">
         <img class="popular-tracks-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
         <div>
           <h3 class="fs-small-more">Darkspace</h3>
           <p class="fs-small-more tt-capitalize">Morten Harket</p>
         </div>
         <p class="ms-auto fs-small-more">3:45</p>
-      </li>
-      <li class="d-flex column-gap-1 align-items-center">
+      </div>
+      <div class="d-flex column-gap-1 align-items-center">
         <img class="popular-tracks-cover" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
         <div>
           <h3 class="fs-small-more">Burn Money Burn</h3>
           <p class="fs-small-more tt-capitalize">Morten Harket</p>
         </div>
         <p class="ms-auto fs-small-more">3:52</p>
-      </li>
-    </ul>
+      </div>
+    </div>
   </section>
 
   <section class="pt-10 limit-content" id="page-discography">
