--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,16 @@
 
     <nav class="mb-mobile-1">
       <ul class="d-flex column-gap-2 flex-mobile-column fs-ultra-small fw-mobile-bold">
-        <li>
+        <li class="lh-1">
           <a class="navigation-link navigation-link--active" href="index.html">Главная</a>
         </li>
-        <li>
+        <li class="lh-1">
           <a class="navigation-link" href="#">Каталог</a>
         </li>
-        <li>
+        <li class="lh-1">
           <a class="navigation-link" href="artist.html">Исполнители</a>
         </li>
-        <li>
+        <li class="lh-1">
           <a class="navigation-link" href="#">Контакты</a>
         </li>
       </ul>
